r48 (07. 02. 2022):
Fixed a crash when XP Tracker was disabled
Fixed an issue where in Aggregated Health Tracker when there was a gap between trackers
Cook Off: Fixed an issue where achievement tracker for "Kiss the Chef" showed on difficulties lower than OVERKILL
Rats Day 1/Cook Off: Fixed an issue where achievement tracker for "Full Measure" showed on difficulties lower than OVERKILL
Murky Station: Added tracker for achievement "Janitor"

r47 (05. 02. 2022):
Rewrote achievement "Denied" to show progress in-game in popup instead of in tracker
Fixed an issue where ignored units were not ignored after sync
Fixed an issue where digital timer trackers were not visible in some heists when they are visible in the game world
Beneath the Mountain: Added tracker for achievement "Juggernauts"
Border Crystals: Fixed an issue where Methlab restart tracker was not visible (host only)
Election Day 2 Plan C: Fixed trackers when you are scrambling the votes
Golden Grin Casino: Added trackers for achievement "City of Sin and Well-Oiled Gears" and "Hail to the King, Baby"
Santa's Workshop: Add tracker for achievement "Santa Slays Slackers"
San Martín Bank: Added tracker for achievement "Gunpowder Glory"

r46 (27. 01. 2022):
Added tracker for achievements "I Do What I Do Best, I Take Scores" and "From Russia With Love"
Black Cat: Stealth only achievements will not show up when Loud entry is selected

r45 (17. 01. 2022):
Fixed a crash when a drill/saw had autorestart
Dragon Heist: Added tracker for achievement "Keep Breathing that Fresh Air"

r44 (16. 01. 2022):
Added more achievement trackers
Removed most of the code for achievement tracking => the achievement progress is now taken directly from the game
Safehouse Raid: Fixed an issue where Ammo Shelves in Wick's Room were tracked when they are inaccessible
Hoxton Breakout Day 1: Fixed an issue where tracker for Police Car/SWAT Van roadblocks was not visible in Xmas version

r43 (02. 01. 2022):