@@ -24,6 +24,7 @@ EHI:ShowAchievementLootCounter({
     achievement = "bat_3",
     max = 10,
     exclude_from_sync = true,
+    remove_after_reaching_target = false,
     counter =
     {
         check_type = EHI.LootCounter.CheckType.OneTypeOfLoot,
