@@ -1,3 +1,7 @@
+r49 (10. 02. 2022):
+Added tracker for achievements "The only one that is true", "The one that had many names", "The one that survived" and "The one who declared himself the hero"
+Birth of Sky: Fixed a load crash (client only)
+
 r48 (07. 02. 2022):
 Fixed a crash when XP Tracker was disabled
 Fixed an issue where in Aggregated Health Tracker when there was a gap between trackers
